--- a/app/src/main/res/drawable-v24/border_white.xml
+++ b/app/src/main/res/drawable-v24/border_white.xml
@@ -6,7 +6,11 @@
             <corners android:radius="0dp"/>
         </shape>
     </item>
-    <item android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp">
+    <item android:left="2dp"
+        android:top="2dp"
+        android:right="2dp"
+        android:bottom="2dp"
+        >
         <shape android:shape="rectangle">
             <solid android:color="#ffffffff"/>
             <corners android:radius="0dp"/>
