--- a/app/src/main/res/layout/shirts_layout.xml
+++ b/app/src/main/res/layout/shirts_layout.xml
@@ -2,14 +2,53 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/border_grayon"
-    android:padding="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorback"
     >
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/front"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Front"
+        app:layout_constraintBottom_toTopOf="@id/colorpicker"
+        app:layout_constraintStart_toStartOf="@id/colorpicker"
+        app:layout_constraintEnd_toStartOf="@id/back"
+        android:layout_marginBottom="15dp"
         />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:layout_constraintBottom_toTopOf="@id/colorpicker"
+        app:layout_constraintStart_toEndOf="@id/front"
+        app:layout_constraintEnd_toEndOf="@id/colorpicker"
+        android:layout_marginBottom="15dp"
+        />
+
+    <com.ak.android.widget.colorpickerseekbar.ColorPickerSeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/colorpicker"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/paint"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/color"
+        app:layout_constraintTop_toBottomOf="@id/colorpicker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
