--- a/app/src/main/res/drawable-v24/border.xml
+++ b/app/src/main/res/drawable-v24/border.xml
@@ -2,9 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#11ffffff"/>
+            <solid android:color="@color/white"/>
             <stroke android:width="1dp" android:color="#55ffffff"/>
-            <corners android:radius="0dp"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 </layer-list>
