--- a/app/src/main/res/layout/bottom_sheet_orders.xml
+++ b/app/src/main/res/layout/bottom_sheet_orders.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cart"
+                android:text="Shirts"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -33,29 +33,16 @@
                 android:textStyle="bold"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Orders"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_20sdp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/orders"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/_400sdp"
             android:id="@+id/body"
             app:layout_constraintTop_toBottomOf="@id/header"
             app:layout_constraintBottom_toBottomOf="parent"
             >
-
 
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -63,21 +50,15 @@
                 android:layout_height="0dp"
                 android:id="@+id/refresher"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/done"
+                app:layout_constraintBottom_toBottomOf="parent"
                 >
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                    <include
-                        android:id="@+id/placeHolder"
-                        layout="@layout/empty_layout"
-                        android:visibility="@{!visibility ? View.VISIBLE : View.GONE}"
-                        />
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/recycler"
-                        android:visibility="@{visibility ? View.VISIBLE : View.GONE}"
                         />
                 </FrameLayout>
 
@@ -85,13 +66,6 @@
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/done"
-                android:text="Buy Now"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
