--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,7 +21,6 @@
             android:background="@color/purple_500"
             android:id="@+id/header"
             app:layout_constraintTop_toTopOf="parent"
-            android:paddingHorizontal="@dimen/_8sdp"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -33,20 +32,20 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/_8sdp"
                 />
 
             <ImageView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:src="@drawable/logout"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/menu"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/logout"
+                android:id="@+id/menu"
+                android:layout_marginEnd="@dimen/_3sdp"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -103,19 +102,8 @@
                     app:layout_constraintTop_toBottomOf="@id/name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/edit_profile"
-                    android:id="@+id/create_shirt"
-                    />
-
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="@dimen/_120sdp"
-                    android:layout_height="wrap_content"
-                    android:text="Edit Profile"
-                    app:layout_constraintTop_toBottomOf="@id/name"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/create_shirt"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/edit_profile"
+                    android:id="@+id/create_shirt"
                     />
 
                 <View
