--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -40,7 +40,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{data.price}"
+                android:text="@{data.formattedPrice}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/image"
@@ -68,10 +68,7 @@
                 android:id="@+id/number_picker"
                 android:layout_width="130dp"
                 android:layout_height="40dp"
-                numberpicker:min="1"
-                numberpicker:max="100"
                 numberpicker:unit="1"
-                numberpicker:focusable="true"
                 numberpicker:custom_layout="@layout/number_picker_custom_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
