--- a/app/src/main/res/layout/shirts_layout.xml
+++ b/app/src/main/res/layout/shirts_layout.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/paint"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/rgb"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/colorpicker"
@@ -21,82 +21,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/colorpicker"
+        app:layout_constraintTop_toBottomOf="@id/paint"
+        android:layout_marginTop="@dimen/_8sdp"
+        />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border_grayon"
+        app:layout_constraintTop_toBottomOf="@id/colorpicker"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="8dp"
+    >
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-
-
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/front"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Front"
-        app:layout_constraintTop_toBottomOf="@id/colorpicker"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/back"
-        app:layout_constraintEnd_toStartOf="@id/roundshirt"
-        />
-
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        app:layout_constraintTop_toBottomOf="@id/front"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/vshirt"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/roundshirt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="R-Shirt"
-        app:layout_constraintTop_toBottomOf="@id/colorpicker"
-        app:layout_constraintStart_toEndOf="@id/front"
-        app:layout_constraintBottom_toTopOf="@id/back"
-        app:layout_constraintEnd_toStartOf="@id/fullsleeve"
-        />
-
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/vshirt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="V-shirt"
-        app:layout_constraintTop_toBottomOf="@id/front"
-        app:layout_constraintStart_toEndOf="@id/back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/halfsleeve"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/fullsleeve"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="F-sleeve"
-        app:layout_constraintTop_toBottomOf="@id/colorpicker"
-        app:layout_constraintStart_toEndOf="@id/roundshirt"
-        app:layout_constraintBottom_toTopOf="@id/back"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
         />
 
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/halfsleeve"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="H-Sleeve"
-        app:layout_constraintTop_toBottomOf="@id/front"
-        app:layout_constraintStart_toEndOf="@id/vshirt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"
         />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
