--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.ImageViewActivity"
-    android:background="@color/cardview_shadow_start_color"
+    android:background="@color/black"
     >
 
 
@@ -17,17 +17,15 @@
         android:paddingHorizontal="@dimen/_8sdp"
         android:elevation="@dimen/_5sdp"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_16sdp"
-            android:textColor="@color/white"
-            android:textStyle="normal"
-            android:text="Delete"
+
+        <ImageView
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:src="@drawable/arrow"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/delete"
+            android:id="@+id/back"
             />
 
         <TextView
@@ -54,21 +52,44 @@
         android:id="@+id/imageView"
         />
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="@dimen/_26sdp"
+        android:src="@drawable/export"
         android:id="@+id/share"
-        app:layout_constraintBottom_toTopOf="@id/cart"
-        android:text="Share"
+        android:backgroundTint="@color/main_color"
+        app:tint="@color/white"
         />
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add To Cart"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/share"
+        android:layout_margin="@dimen/_26sdp"
+        android:src="@drawable/cart"
         android:id="@+id/cart"
+        app:tint="@color/white"
+        android:backgroundTint="@color/main_color"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/cart"
+        android:layout_margin="@dimen/_26sdp"
+        android:src="@drawable/cancel3"
+        android:id="@+id/delete"
+        app:fabSize="normal"
+        app:tint="@color/white"
+        android:backgroundTint="@color/main_color"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
