--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -86,7 +86,7 @@
                         />
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:id="@+id/recycler"
                         android:visibility="@{visibility ? View.VISIBLE : View.GONE}"
                         />
@@ -110,11 +110,11 @@
                 <com.google.android.material.button.MaterialButton
                     android:layout_width="@dimen/_200sdp"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:id="@+id/done"
                     android:text="Checkout"
                     android:layout_gravity="center"
+                    android:backgroundTint="@color/button_state_color"
                     />
 
             </androidx.cardview.widget.CardView>
