--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -87,7 +87,62 @@
             android:background="@drawable/placeholder_slider"
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="Contact Us"
+            android:textSize="@dimen/_16sdp"
+            app:layout_constraintTop_toBottomOf="@id/two"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/contactUs"
+            />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_2sdp"
+            app:layout_constraintTop_toBottomOf="@id/contactUs"
+            android:id="@+id/three"
+            android:background="@drawable/placeholder_slider"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="Follow Us On"
+            android:textSize="@dimen/_16sdp"
+            app:layout_constraintTop_toBottomOf="@id/three"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/followUs"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_2sdp"
+            app:layout_constraintTop_toBottomOf="@id/followUs"
+            android:id="@+id/four"
+            android:background="@drawable/placeholder_slider"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="@string/about"
+            android:textSize="@dimen/_16sdp"
+            app:layout_constraintTop_toBottomOf="@id/four"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/about"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_2sdp"
+            app:layout_constraintTop_toBottomOf="@id/about"
+            android:id="@+id/five"
+            android:background="@drawable/placeholder_slider"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
