--- a/app/src/main/res/layout/activity_design.xml
+++ b/app/src/main/res/layout/activity_design.xml
@@ -130,8 +130,12 @@
         >
 
         <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/shirtContainer"
             />
 
