--- a/app/src/main/res/layout/fragment_new_feed.xml
+++ b/app/src/main/res/layout/fragment_new_feed.xml
@@ -10,7 +10,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.NewFeedFragment">
+    tools:context=".Fragments.NewFeedFragment"
+    android:background="@color/white"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
